--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
     page:portfolio homepage
-    Name:humphrey kamau
+    Name:mercy kerubo
     language:html
 -->
 <!DOCTYPE html>
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/main.css">
-    <title>humphreys portfolio</title>
+    <title>mercy's portfolio</title>
 
 </head>
 <body>
